@@ -18,13 +18,13 @@ my $s = $driver->session;
 # class, particularly for input that is legal, but unusual -- for example,
 # due to coding errors on the client's part.
 
-use Test::More 0.96 tests => 10 + 1;
+use Test::More 0.96 tests => 11 + 1;
 use Test::Exception;
 my $transaction = $s->begin_transaction;
 $transaction->{return_stats} = 0;  # optimise sim
 
 
-my ($q, $r, $v);
+my ($q, $r, $v, @a);
 
 
 subtest 'result with no statement' => sub {
@@ -41,9 +41,9 @@ subtest 'result with no statement' => sub {
 
 subtest 'keys()' => sub {
 	plan tests => 2;
-	$r = $s->run('RETURN 1 AS one, 2 AS two')->keys;
-	is $r->[0], 'one', 'key 1';
-	is $r->[1], 'two', 'key 2';
+	my @r = $s->run('RETURN 1 AS one, 2 AS two')->keys;
+	is $r[0], 'one', 'key 1';
+	is $r[1], 'two', 'key 2';
 };
 
 
@@ -82,7 +82,7 @@ subtest 'list interface: zero rows' => sub {
 	plan tests => 3;
 	$r = $s->run('RETURN 0 LIMIT 0');
 	lives_and { is $r->size, 0 } 'size no rows';
-	lives_and { is_deeply scalar $r->list, [] } 'list no rows';
+	lives_and { is_deeply scalar [ $r->list ], [] } 'list no rows';
 	throws_ok { $r->single; } qr/\bexactly one\b/i, 'single called with 0 records';
 };
 
@@ -90,9 +90,9 @@ subtest 'list interface: zero rows' => sub {
 subtest 'list interface: one row' => sub {
 	plan tests => 8;
 	$r = $s->run('RETURN 42');
-	lives_ok { $v = 0;  $v = $r->list } 'list';
-	is scalar(@$v), 1, 'list one row';
-	isa_ok $v->[0], 'Neo4j::Driver::Record', 'list: confirmed record';
+	lives_ok { @a = ();  @a = $r->list } 'list';
+	is scalar(@a), 1, 'list one row';
+	isa_ok $a[0], 'Neo4j::Driver::Record', 'list: confirmed record';
 	lives_and { is $r->size, 1 } 'size one row';
 	my $single;
 	lives_ok { $single = $r->single } 'single';
@@ -106,13 +106,23 @@ subtest 'list interface: more rows' => sub {
 	plan tests => 7;
 	$r = $s->run('RETURN 7 AS n UNION RETURN 11 AS n');
 	lives_and { is $r->size, 2 } 'size two rows';
-	my $list;
-	lives_ok { $list = $r->list } 'list';
-	is scalar @$list, 2, 'list two rows';
-	isa_ok $list->[0], 'Neo4j::Driver::Record', 'list: confirmed record';
+	my @list;
+	lives_ok { @list = $r->list } 'list';
+	is scalar @list, 2, 'list two rows';
+	isa_ok $list[0], 'Neo4j::Driver::Record', 'list: confirmed record';
 	throws_ok { $r->single; } qr/\bexactly one\b/i, 'single called with 2+ records';
-	lives_ok { $v = 0;  $v = $r->list } 'list again';
-	is_deeply $v, $list, 'lists match';
+	lives_ok { @a = ();  @a = $r->list } 'list again';
+	is_deeply [@a], [@list], 'lists match';
+};
+
+
+subtest 'list interface: arrayref in scalar context' => sub {
+	plan tests => 4;
+	$q = 'RETURN 7 AS n UNION RETURN 11 AS n';
+	lives_ok { $v = 0;  $v = $s->run($q)->list; } 'get records';
+	is ref $v, 'ARRAY', 'get records as array';
+	lives_and { is $v->[0]->get('n'), 7; } 'get record 0 in record array';
+	lives_and { is $v->[1]->get('n'), 11; } 'get record 1 in record array';
 };
 
 
@@ -130,9 +140,9 @@ subtest 'list/stream interface mixed' => sub {
 	lives_and { ok ! $r->has_next } 'no has next after list';
 	lives_and { is $r->fetch(), undef } 'fetch no next row';
 	# get list() of remainder (buffered)
-	lives_ok { $v = 0;  $v = $r->list } 'list';
-	lives_and { is $v->[0]->get('n'), 11 } 'fetched second row value: list';
-	lives_and { is scalar @$v, 1 } 'list size 1';
+	lives_ok { @a = ();  @a = $r->list } 'list';
+	lives_and { is $a[0]->get('n'), 11 } 'fetched second row value: list';
+	lives_and { is scalar @a, 1 } 'list size 1';
 	lives_and { is $r->size, 1 } 'result size 1';
 };
 
